add solarized theme

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,4 +1,4 @@
-export { future as theme } from '../themes'
+export { solarized as theme } from '../themes'
 import { Head, Image, Notes, Appear } from '../dist'
 import { Invert, Split, FullScreenCode, Horizontal} from '../layouts'
 import Counter from './Counter'
