POC: transclude mdx
- https://mdxjs.com/syntax#markdown-file-transclusion

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,6 +3,7 @@ import { Head, Image, Notes, Appear } from '../dist'
 import { Invert, Split, FullScreenCode, Horizontal} from '../layouts'
 import Counter from './Counter'
 import code from './code'
+import Preface from './preface.mdx_'
 
 <Head>
   <title>mdx-deck</title>
@@ -16,6 +17,10 @@ import code from './code'
 # mdx-deck
 
 MDX-based presention decks
+---
+
+<Preface />
+
 ---
 # Presentation decks
 ---
